@@ -11,6 +11,7 @@ Lib/
   LDAPObject._l to completely invalidate C wrapper object
 * LDAPObject.unbind_ext() now flushes trace file
 * added functions ldap.strf_secs() and ldap.strp_secs()
+* added function ldap.filter.time_span_filter()
 * Refactored ldif.LDIFParser
   * ldif.LDIFParser.version ís now Integer
   * ignore multiple empty lines between records
@@ -1266,4 +1267,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.382 2016/07/17 19:46:49 stroeder Exp $
+$Id: CHANGES,v 1.383 2016/07/24 15:14:56 stroeder Exp $
